src/command/snapshots/dss__command__lexer__tests__cmd_lexing_of_logical_or.snap
---
source: src/command/lexer.rs
expression: lexer.tokens
---
[
    Token {
        lexeme: "ls",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            0,
            1,
        ),
    },
    Token {
        lexeme: "-la",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            3,
            5,
        ),
    },
    Token {
        lexeme: "||",
        token_type: Operator(
            OrIf,
        ),
        line: 0,
        range: (
            7,
            8,
        ),
    },
    Token {
        lexeme: "echo",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            10,
            13,
        ),
    },
    Token {
        lexeme: "foo",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            15,
            17,
        ),
    },
]
