src/command/snapshots/dss__command__lexer__tests__cmd_lexing_of_semicolon_logical_or-2.snap
---
source: src/command/lexer.rs
expression: lexer.tokens
---
[
    Token {
        lexeme: "ls",
        token_type: Word,
        line: 0,
        range: (
            0,
            1,
        ),
    },
    Token {
        lexeme: "-la",
        token_type: Word,
        line: 0,
        range: (
            4,
            6,
        ),
    },
    Token {
        lexeme: "||",
        token_type: Operators(
            OrIf,
        ),
        line: 0,
        range: (
            6,
            7,
        ),
    },
    Token {
        lexeme: "echo",
        token_type: Word,
        line: 0,
        range: (
            9,
            12,
        ),
    },
    Token {
        lexeme: "foo",
        token_type: Word,
        line: 0,
        range: (
            14,
            16,
        ),
    },
]
