src/command/snapshots/dss__command__lexer__tests__cmd_lexing_with_multiple_separators.snap
---
source: src/command/lexer.rs
expression: lexer.tokens
---
[
    Token {
        lexeme: "false",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            0,
            4,
        ),
    },
    Token {
        lexeme: "&&",
        token_type: Operator(
            AndIf,
        ),
        line: 0,
        range: (
            6,
            7,
        ),
    },
    Token {
        lexeme: "echo",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            9,
            12,
        ),
    },
    Token {
        lexeme: "foo",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            14,
            16,
        ),
    },
    Token {
        lexeme: "||",
        token_type: Operator(
            OrIf,
        ),
        line: 0,
        range: (
            18,
            19,
        ),
    },
    Token {
        lexeme: "echo",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            21,
            24,
        ),
    },
    Token {
        lexeme: "bar",
        token_type: Word(
            Text,
        ),
        line: 0,
        range: (
            26,
            28,
        ),
    },
]
